# linux_peripheral_library

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  conanfile.txt  download_dependencies.sh
include/etl/: etl_profile.h
include/lpl/: common.hpp  gpio.hpp  io_context.hpp  led.hpp  lpl_traits.hpp  pwm.hpp  soft_pwm.hpp  spi.hpp  type_traits.hpp  uart.hpp  util.hpp
include/lpl/async/: epoll.hpp
include/lpl/epoll/: epoll.hpp
include/lpl/generic/: led.hpp
include/lpl/gpio/: led.hpp
include/lpl/i2c/: character_lcd.hpp
include/lpl/peripheral/: can.hpp  common.hpp  gpio.hpp  i2c.hpp  led.hpp  pwm.hpp  soft_pwm.hpp  spi.hpp  uart.hpp  util.hpp
include/lpl/pwm/: led.hpp
include/lpl/spi/: icm20948.hpp  pcf8591p.hpp
test/: CMakeLists.txt  gpio.cpp  gpio_led.cpp  i2c.cpp  led.cpp  pwm.cpp  pwm_led.cpp  soft_pwm.cpp  spi.cpp  uart.cpp
